# tp_full_cmake

./: CMakeLists.txt  Doxyfile.in  main.cpp
.github/workflow/: ci.yml
docs/: Readme.md  mainpage.md
docs/html/: dir_49e56c817e5e54854c35e136979f97ca.html  dir_68267d1309a1af8e8297ef4c3efbcdba.html  files.html  globals.html  globals_func.html  graph_legend.html  index.html
docs/html/d2/d35/: prime_8cpp__incl.map  prime_8cpp__incl.md5
docs/html/d3/d30/: palindrome_8cpp__incl.map  palindrome_8cpp__incl.md5
docs/html/d3/d71/: prime_8cpp.html
docs/html/d4/d62/: example__class_8cpp__incl.map  example__class_8cpp__incl.md5
docs/html/d8/da6/: example__class_8cpp.html
docs/html/d9/d00/: factorial_8cpp.html
docs/html/d9/d78/: factorial_8cpp__incl.map  factorial_8cpp__incl.md5
docs/html/d9/d89/: fibonacci_8cpp.html
docs/html/d9/dec/: palindrome_8cpp.html
docs/html/df/d0f/: fibonacci_8cpp__incl.map  fibonacci_8cpp__incl.md5
docs/html/search/: all_1.js  all_3.js  all_4.js  files_0.js  files_2.js  functions_0.js  searchdata.js
docs/latex/: files.tex  index.tex  refman.tex
docs/latex/d2/d35/: prime_8cpp__incl.md5
docs/latex/d3/d30/: palindrome_8cpp__incl.md5
docs/latex/d3/d71/: prime_8cpp.tex
docs/latex/d4/d62/: example__class_8cpp__incl.md5
include/: example_class.h  factorial.h  fibonacci.h  palindrome.h  prime.h
src/: CMakeLists.txt  example_class.cpp  factorial.cpp  fibonacci.cpp  palindrome.cpp  prime.cpp
tests/: CMakeLists.txt  test_example_class.cpp  test_factorial.cpp  test_fibonacci.cpp  test_palindrome.cpp  test_prime.cpp
(+6 files in other folders)
